# LuminaCore

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTOR_INCENTIVES.md  DEVELOPMENT_SUMMARY.md  DISCORD_COMMUNITY_GUIDE.md  Getting_Started.ipynb  IFLOW.md  LICENSE  LUMINA_KERNEL_SUMMARY.md  Makefile  PROMO_PACKAGE.md  README.G.md  README.Github.md  README.Tech.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE_v0.2.0.md  RELEASE_v0.2.0.md  benchmark_rust_vs_pytorch.py  benchmark_v03.py  create_lightning_integration.py  distributed_llama_demo.py  distributed_llama_demo_en.py  generate_logo.py  github_discussion_v0.2.0.md  lumina_demo.py  metadata.json  optimize_rust_backend.py  physics_demo.py  pipeline_demo_real.py  pipeline_demo_simple.py  promote_colab.py  pyproject.toml  rust_distributed_demo.py  test_lumina.py  (+4 more)
lumina_kernel/: BUILD_GUIDE.md  Cargo.toml  README.md  pyproject.toml  test_ffi.py
lumina_kernel/.cargo/: config.toml
lumina_kernel/.cargo_home/: .global-cache
lumina_kernel/.cargo_home/registry/cache/mirrors.ustc.edu.cn-38d0e5eb5da2abae/: numpy-0.20.0.crate  numpy-0.23.0.crate  portable-atomic-1.12.0.crate  pyo3-0.20.3.crate  pyo3-build-config-0.20.3.crate  pyo3-ffi-0.20.3.crate  pyo3-macros-0.20.3.crate  pyo3-macros-backend-0.20.3.crate  zerocopy-derive-0.8.31.crate
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/: config.json
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/3/s/: syn
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/au/to/: autocfg
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/bi/tf/: bitflags
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/cf/g-/: cfg-if
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/cr/os/: crossbeam-deque  crossbeam-epoch  crossbeam-utils
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/ei/th/: either
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/ge/tr/: getrandom
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/he/ck/: heck
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/in/do/: indoc
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/it/oa/: itoa
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/li/bc/: libc
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/lo/ck/: lock_api
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/ma/tr/: matrixmultiply
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/me/mc/: memchr
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/me/mo/: memoffset
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/nd/ar/: ndarray
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/nu/m-/: num-complex  num-integer  num-traits
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/nu/mp/: numpy
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/on/ce/: once_cell
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/pa/rk/: parking_lot  parking_lot_core
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/po/rt/: portable-atomic
lumina_kernel/.cargo_home/registry/index/mirrors.ustc.edu.cn-38d0e5eb5da2abae/.cache/py/o3/: pyo3  (+4 more)
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/numpy-0.20.0/: .cargo_vcs_info.json  Cargo.toml
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/numpy-0.23.0/: .cargo_vcs_info.json  Cargo.toml
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/pyo3-0.20.3/: .cargo_vcs_info.json
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/pyo3-build-config-0.20.3/: .cargo_vcs_info.json
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/pyo3-ffi-0.20.3/: .cargo_vcs_info.json
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/pyo3-macros-0.20.3/: .cargo_vcs_info.json
lumina_kernel/.cargo_home/registry/src/mirrors.ustc.edu.cn-38d0e5eb5da2abae/pyo3-macros-backend-0.20.3/: .cargo_vcs_info.json
lumina_kernel/src/: compute.rs  fused_ops.rs  lib.rs  noise.rs  physics.rs  quantization.rs  runtime.rs
lumina_kernel/src/hal/: manager.rs  mock.rs  mod.rs
(+147 files in other folders)
