[package]
name = "lumina_kernel"
version = "0.1.0"
edition = "2021"
authors = ["LuminaFlow Team <contact@luminaflow.ai>"]
description = "Rust-accelerated photonic computing backend for LuminaFlow SDK"
license = "Apache-2.0"

[lib]
name = "lumina_kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23.0"
ndarray = { version = "0.15", features = ["rayon"] }
num-complex = "0.4"
rayon = "1.8"
rand = "0.8"
rand_xoshiro = "0.6"
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.19"

[dev-dependencies]
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
